--- a/src/component/MovieComponent.css
+++ b/src/component/MovieComponent.css
@@ -34,3 +34,9 @@
     color: black;
     text-transform: capitalize;
 }
+.favourite-button{
+    border-style:inset ;
+    color: crimson;
+    cursor: pointer;
+
+}
